# flutter_v2_android

./: README.md  pubspec.yaml
android/: download_v2ray.sh
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: v2ray_bridge.cpp
android/app/src/main/kotlin/com/v2ray/ang/flutter_v2_android/: MainActivity.kt
android/app/src/main/kotlin/com/v2ray/ang/flutter_v2_android/v2ray/: V2RayNative.kt  V2RayPlugin.kt
android/app/src/main/kotlin/com/v2ray/ang/flutter_v2_android/vpn/: V2rayVpnService.kt  VpnPlugin.kt
docs/: 00_项目概述.md  07_跨平台适配详解.md  08_安全架构设计.md  项目概述.md
integration_test/: home_screen_test.dart  server_list_test.dart  settings_test.dart  subscription_test.dart
lib/: main.dart
lib/config/: app_config.dart
lib/core/channel/: channel_constants.dart
lib/core/config/: v2ray_config_generator.dart
lib/core/constants/: channel_constants.dart
lib/core/ffi/: v2ray_ffi.dart  v2ray_method_channel.dart
lib/core/v2ray/: android_v2ray_service.dart  ffi_v2ray_service.dart  v2ray_service.dart
lib/core/vpn/: android_vpn_service.dart  vpn_service.dart
lib/di/: app_module.dart
lib/models/config/: app_settings.dart  subscription.dart
lib/models/server/: server_config.dart
lib/services/connection/: connection_service.dart
lib/services/server/: server_service.dart
lib/utils/: logger.dart
test/: config_generator_test.dart  connection_service_test.dart  server_service_test.dart  service_test.dart  subscription_service_test.dart  widget_test.dart
(+14 files in other folders)
